[gd_scene load_steps=5 format=2]

[ext_resource path="res://theme_test.tres" type="Theme" id=1]
[ext_resource path="res://AudioOptionsMenu.gd" type="Script" id=2]
[ext_resource path="res://Sounds/BackgroundMusic/celeste_inspired_soundtrack.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/mixkit-electronic-retro-block-hit-2185.wav" type="AudioStream" id=4]

[node name="AudioOptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestAudioStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Background Music"

[node name="TestSoundStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Sounds"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.192157, 0.2, 0.313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
margin_left = 75.0
margin_top = 34.0
margin_right = 437.0
margin_bottom = 266.0
rect_min_size = Vector2( 240, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_right = 362.0
margin_bottom = 24.0

[node name="General Volume" type="Label" parent="ColorRect/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 185.0
margin_bottom = 24.0
text = "General Volume"
align = 1
valign = 1

[node name="GeneralVolumeSlider" type="HSlider" parent="ColorRect/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 189.0
margin_right = 289.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
min_value = -80.0
max_value = 5.0
allow_lesser = true

[node name="GenralVolumeLabel" type="Label" parent="ColorRect/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 293.0
margin_right = 332.0
margin_bottom = 24.0
text = "100"
align = 1
valign = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 362.0
margin_bottom = 52.0

[node name="Background Music" type="Label" parent="ColorRect/CenterContainer/VBoxContainer/HBoxContainer3"]
margin_right = 215.0
margin_bottom = 24.0
text = "background music"
align = 1
valign = 1

[node name="BackgroundMusicVolumeSlider" type="HSlider" parent="ColorRect/CenterContainer/VBoxContainer/HBoxContainer3"]
margin_left = 219.0
margin_right = 319.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
min_value = -80.0
max_value = 5.0
allow_lesser = true

[node name="BackGroundVolumeLabel" type="Label" parent="ColorRect/CenterContainer/VBoxContainer/HBoxContainer3"]
margin_left = 323.0
margin_right = 362.0
margin_bottom = 24.0
text = "100"
align = 1
valign = 1

[node name="VolumeTestButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 362.0
margin_bottom = 90.0
text = "Test"

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 362.0
margin_bottom = 118.0
rect_min_size = Vector2( 10, 0 )

[node name="Sounds" type="Label" parent="ColorRect/CenterContainer/VBoxContainer/HBoxContainer2"]
margin_right = 160.0
margin_bottom = 24.0
text = "Sound Effects"
align = 1
valign = 1

[node name="SoundsVolumeSlider" type="HSlider" parent="ColorRect/CenterContainer/VBoxContainer/HBoxContainer2"]
margin_left = 164.0
margin_right = 264.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
min_value = -80.0
max_value = 6.0
step = 0.5
allow_lesser = true

[node name="SoundsLabel" type="Label" parent="ColorRect/CenterContainer/VBoxContainer/HBoxContainer2"]
margin_left = 268.0
margin_right = 307.0
margin_bottom = 24.0
text = "100"

[node name="VolumeTestButton2" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 362.0
margin_bottom = 156.0
text = "Test"

[node name="AudioOptionsMenuResetButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 362.0
margin_bottom = 194.0
text = "Reset"

[node name="AudioOptionsBackButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 198.0
margin_right = 362.0
margin_bottom = 232.0
rect_min_size = Vector2( 100, 0 )
text = "Back"

[connection signal="value_changed" from="ColorRect/CenterContainer/VBoxContainer/HBoxContainer/GeneralVolumeSlider" to="." method="_on_GeneralVolumeSlider_value_changed"]
[connection signal="value_changed" from="ColorRect/CenterContainer/VBoxContainer/HBoxContainer3/BackgroundMusicVolumeSlider" to="." method="_on_BackgroundMusicVolumeSlider_value_changed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/VolumeTestButton" to="." method="_on_VolumeTestButton_pressed"]
[connection signal="value_changed" from="ColorRect/CenterContainer/VBoxContainer/HBoxContainer2/SoundsVolumeSlider" to="." method="_on_SoundsVolumeSlider_value_changed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/VolumeTestButton2" to="." method="_on_VolumeTestButton2_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/AudioOptionsMenuResetButton" to="." method="_on_AudioOptionsMenuResetButton_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/AudioOptionsBackButton" to="." method="_on_AudioOptionsBackButton_pressed"]
